@@ -1527,10 +1527,10 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
 
     <dt id="cfg_NavigationTreeEnableGrouping">$cfg['NavigationTreeEnableGrouping'] boolean</dt>
     <dd>Defines whether to group the databases based on a common prefix prefix in their name
-        <a href="#cfg_LeftFrameDBSeparator" class="configrule">$cfg['LeftFrameDBSeparator']</a>.
+        <a href="#cfg_NavigationTreeDbSeparator" class="configrule">$cfg['NavigationTreeDbSeparator']</a>.
     </dd>
 
-    <dt id="cfg_LeftFrameDBSeparator">$cfg['LeftFrameDBSeparator']
+    <dt id="cfg_NavigationTreeDbSeparator">$cfg['NavigationTreeDbSeparator']
     string or array</dt>
     <dd>The string used to separate the parts of the database name when showing
         them in a tree. Alternatively you can specify more strings in an array
