@@ -275,8 +275,6 @@ $strConfigLeftDisplayServers_desc = __('Display server choice at the top of the 
 $strConfigLeftDisplayServers_name = __('Display servers selection');
 $strConfigLeftDisplayTableFilterMinimum_name = __('Minimum number of tables to display the table filter box');
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
-$strConfigLeftFrameDBSeparator_desc = __('String that separates databases into different tree levels');
-$strConfigLeftFrameDBSeparator_name = __('Database tree separator');
 $strConfigLeftFrameTableLevel_name = __('Maximum table tree depth');
 $strConfigLeftFrameTableSeparator_desc = __('String that separates tables into different tree levels');
 $strConfigLeftFrameTableSeparator_name = __('Table tree separator');
@@ -318,6 +316,8 @@ $strConfigMemoryLimit_desc = __('The number of bytes a script is allowed to allo
 $strConfigMemoryLimit_name = __('Memory limit');
 $strConfigNavigationTreeEnableGrouping_desc = __('Group items in the navigation tree (determined by the separator defined below)');
 $strConfigNavigationTreeEnableGrouping_name = __('Group items in the tree');
+$strConfigNavigationTreeDbSeparator_desc = __('String that separates databases into different tree levels');
+$strConfigNavigationTreeDbSeparator_name = __('Database tree separator');
 $strConfigRowActionLinks_desc = __('These are Edit, Copy and Delete links');
 $strConfigRowActionLinks_name = __('Where to show the table row links');
 $strConfigNaturalOrder_desc = __('Use natural order for sorting table and database names');
