@@ -56,6 +56,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Dropped configuration directive: NaviDatabaseNameColor
 + Added configuration directive: MaxNavigationItems
 + Renamed configuration directive: LeftFrameDBTree => NavigationTreeEnableGrouping
++ Renamed configuration directive: LeftFrameDBSeparator => NavigationTreeDbSeparator
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
